--- a/themes/sevian/css/login.css
+++ b/themes/sevian/css/login.css
@@ -29,11 +29,12 @@ body, html {
 }
 
 .wrapper {
-  display: none;
+  display: -ms-grid;
+  display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: auto;
-  grid-column-gap: 10px;
+  grid-column-gap: 20px;
   grid-row-gap: 1em;
   height: 100%;
 }
