--- a/css/Layout.css
+++ b/css/Layout.css
@@ -39,9 +39,6 @@ html, body {
 .p2 {
   background-color: #ececec;
   overflow: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .p3 {
@@ -73,10 +70,21 @@ html, body {
   background-color: #52565a;
 }
 
+form {
+  height: 100%;
+  overflow: auto;
+}
+
 .sg-grid {
   height: 100%;
-  border: 2px solid #52565a;
   overflow: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .body {
