--- a/css/Paginator.css
+++ b/css/Paginator.css
@@ -11,6 +11,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .sg-paginator .page {
