--- a/css/Paginator.scss
+++ b/css/Paginator.scss
@@ -7,6 +7,7 @@
     font-family: 'Courier New', Courier, monospace;
     font-size: 9pt;
     display: flex ;
+    flex-wrap: wrap;
     .page{
         width:30px;
         display: inline-block;
