--- a/css/Form.scss
+++ b/css/Form.scss
@@ -32,7 +32,30 @@ body, html{
     }
     
 }
-
+.sg-menu.horizontal{
+	.caption{
+		display:none;
+	}
+	.menu{
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.item{
+		button{
+			border:0px;
+		}
+		
+		//display: inline-block!important;
+		.icon{
+			display:none;
+		}
+	}
+	
+	li{
+		display: inline-block!important;
+	}
+	
+}
 .sg-page{
     margin: 2px;
     border: 2px #6D5858 solid;
