--- a/css/Layout.css
+++ b/css/Layout.css
@@ -51,7 +51,8 @@ html, body {
 }
 
 .p4 {
-  background-color: #284e4e;
+  background-color: #d6d6d6;
+  overflow: auto;
 }
 
 .p7 {
@@ -161,5 +162,25 @@ table tr td {
   grid-column: 3;
   -ms-grid-row: 4;
   grid-row: 4;
+}
+
+.sg-menu.horizontal .caption {
+  display: none;
+}
+
+.sg-menu.horizontal .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.sg-menu.horizontal .item .icon {
+  display: none;
+}
+
+.sg-menu.horizontal li {
+  display: inline-block !important;
 }
 /*# sourceMappingURL=Layout.css.map */
