--- a/css/Menu.scss
+++ b/css/Menu.scss
@@ -126,6 +126,24 @@
 }
 
 .sg-menu.horizontal{
+	.caption{
+		display:none;
+	}
+	.menu{
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.item{
+		button{
+			border:0px;
+		}
+		
+		//display: inline-block!important;
+		.icon{
+			display:none;
+		}
+	}
+	
 	li{
 		display: inline-block!important;
 	}
