--- a/css/form.css
+++ b/css/form.css
@@ -32,6 +32,30 @@ body, html {
   /* Unicode character for "plus" sign (+) */
 }
 
+.sg-menu.horizontal .caption {
+  display: none;
+}
+
+.sg-menu.horizontal .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.sg-menu.horizontal .item button {
+  border: 0px;
+}
+
+.sg-menu.horizontal .item .icon {
+  display: none;
+}
+
+.sg-menu.horizontal li {
+  display: inline-block !important;
+}
+
 .sg-page {
   margin: 2px;
   border: 2px #6D5858 solid;
