--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -8,6 +8,10 @@ html, body{
     height: 100%;
 }
 
+body{
+  //background-image: url("../../wallpapers/2019-02.jpg");
+}
+
 .layout {
     display: grid;
     grid-gap: 4px;
@@ -21,40 +25,40 @@ html, body{
         border:2px solid #d9480f;
        // height: 50vh;
     }
+    .p1 {
+      grid-column: 1;
+      grid-row: 3 / 5;
+      background-color: blueviolet;
+      
+    }
+    
+    .p2{
+        background-color: rgb(236, 236, 236);
+        overflow: auto;
+        
+    }
+    .p3 {
+        grid-column: 1 / 4;
+        grid-row: 2;
+        background-color: rgb(180, 75, 145);
+    }
+    .p4{
+        background-color: rgb(214, 214, 214);
+        overflow: auto;
+    }
+    .p7 {
+        grid-column: 1 / 4;
+        grid-row: 1;
+        border:2px solid #104581;
+    }
+    .p8 {
+        grid-column: 1 / 4;
+        //grid-row: 1;
+        
+        background-color:#52565a;
+    }
+}
 
-}
-.p1 {
-    grid-column: 1;
-    grid-row: 3 / 5;
-    background-color: blueviolet;
-    
-}
-
-.p2{
-    background-color: rgb(236, 236, 236);
-    overflow: auto;
-    
-}
-.p3 {
-    grid-column: 1 / 4;
-    grid-row: 2;
-    background-color: rgb(180, 75, 145);
-}
-.p4{
-    background-color: rgb(214, 214, 214);
-    overflow: auto;
-}
-.p7 {
-    grid-column: 1 / 4;
-    grid-row: 1;
-    border:2px solid #104581;
-}
-.p8 {
-    grid-column: 1 / 4;
-    //grid-row: 1;
-    
-    background-color:#52565a;
-}
 form{
   height: 100%;
   overflow: auto;
@@ -151,4 +155,70 @@ table{
 		display: inline-block!important;
 	}
 	
+}
+
+$alpha: 0;
+.gtcomm{
+  height: 100%;
+  overflow: auto;
+  grid-gap: 0px;
+  //border: 2px solid black;
+  display: grid;
+  grid-template-columns: 190px repeat(4, 1fr);
+  grid-template-rows: 30px 30px auto 30px 30px;
+  >*{
+    //border:1px solid red;
+
+  }
+  //
+  .p1 {
+      grid-column: 1;
+      grid-row: 1 / 6;
+      background-color: rgba(39, 39, 39, 1.0);
+      
+  }
+
+  .p2{
+      grid-column: 2 / 6;
+      grid-row: 1;
+      background-color: rgba(151, 151, 151, 1);
+      overflow: auto;
+      
+  }
+  .p3 {
+      grid-column: 2 / 6;
+      grid-row: 2;
+      background-color: rgba(58, 58, 58, 1);
+  }
+  .p4{
+      grid-column: 2 / 4;
+      grid-row: 3;
+      background-color: rgba(187, 187, 187, 1);
+      overflow: auto;
+  }
+  .p5{
+    grid-column: 4 / 5;
+      grid-row: 3;
+    background-color: rgba(202, 202, 202, 1);
+    overflow: auto;
+  }
+  .p6{
+    grid-column: 5 / 6;
+      grid-row: 3;
+    background-color: rgba(112, 111, 111, 1);
+    overflow: auto;
+  }
+  .p7 {
+      grid-column: 2 / 6;
+      grid-row: 4;
+      background-color: rgba(240, 240, 240, 1);
+      
+  }
+  .p8 {
+      grid-column: 2 / 6;
+      grid-row: 5;
+      
+      background-color: rgb(179, 179, 179);
+  }
+
 }
