--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -222,3 +222,26 @@ $alpha: 0;
   }
 
 }
+
+div[data-sg-type=sg-ajax]{
+	
+	
+	
+	&.isie{
+		background-color: rgba(255,255,255,0.80);
+		background-image: url(images/wait1.gif);
+		_background-size: 40px 40px;
+	}
+	
+	&:not(.isie){
+		background-color: rgba(0,0,0,0.52);
+		background-image: url(images/default2.svg);
+		background-size: 40px 40px;
+	}
+	
+	
+	background-repeat: no-repeat;
+	background-position: center center;
+	
+	
+}
