--- a/css/Layout.css
+++ b/css/Layout.css
@@ -288,4 +288,59 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   background-image: url(images/default2.svg);
   background-size: 40px 40px;
 }
+
+.drag {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #f5e663;
+  border: 10px solid rgba(136, 136, 136, 0.5);
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: auto  auto;
+      grid-template-rows: auto  auto;
+}
+
+.drag > * {
+  border: 4px solid rgba(136, 136, 136, 0.5);
+}
+
+.drag > .a {
+  text-align: center;
+  vertical-align: middle;
+  border: 4px solid rgba(136, 136, 136, 0.5);
+}
+
+.drag > .b {
+  text-align: center;
+  vertical-align: middle;
+  background-color: #33a158;
+  border: 8px solid rgba(136, 136, 136, 0.5);
+}
+
+.drag .c {
+  background-color: #63277a;
+}
+
+.drag .e {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+}
+
+.drag2 {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: #f5e663;
+  border: 10px solid rgba(136, 136, 136, 0.5);
+}
 /*# sourceMappingURL=Layout.css.map */
