--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -245,3 +245,53 @@ div[data-sg-type=sg-ajax]{
 	
 	
 }
+
+
+.drag{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width:100%;
+  height:100%;
+  background-color: rgb(245, 230, 99);
+  border: 10px solid rgba(136, 136, 136, .5);
+
+  display: grid;
+
+  grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto  auto ;
+    >*{
+      border: 4px solid rgba(136, 136, 136, .5);
+    }
+  >.a{
+    
+    text-align: center;
+    vertical-align: middle;
+    border: 4px solid rgba(136, 136, 136, .5);
+   
+  }
+  >.b{
+    
+    text-align: center;
+    vertical-align: middle;
+    background-color: rgb(51, 161, 88);
+    border: 8px solid rgba(136, 136, 136, .5);
+  }
+  .c{
+    
+    background-color: rgb(99, 39, 122);
+  }
+  .e{
+    grid-column: 2/4;
+  }
+}
+
+.drag2{
+  user-select: none;
+  position: absolute;
+  width:100px;
+  height:100px;
+  background-color: rgb(245, 230, 99);
+  border: 10px solid rgba(136, 136, 136, .5);
+
+}
