--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -289,9 +289,219 @@ div[data-sg-type=sg-ajax]{
 .drag2{
   user-select: none;
   position: absolute;
+  //top: 0px;
+  width:100pt;
+  height:100px;
+  background-color: rgb(245, 230, 99);
+  border: 10px solid rgb(128, 41, 41);
+  //min-width: 30px;
+
+
+}
+.drag4{
+  user-select: none;
+  position: absolute;
+  //top: 0px;
   width:100px;
   height:100px;
   background-color: rgb(245, 230, 99);
-  border: 10px solid rgba(136, 136, 136, .5);
+  border: 10px solid rgb(117, 115, 115);
+  min-width: 40px;
+  min-height: 40px;
 
+
+}
+.drag3{
+  user-select: none;
+  position: absolute;
+  top: 100px;
+  left: 300px;
+  width:60pt;
+  height:100px;
+  background-color: rgb(245, 230, 99);
+  border: 2px solid rgb(133, 57, 57);
+  //min-width: 30px;
+
+
+}
+.drag5{
+  user-select: none;
+  position: absolute;
+  top: 100px;
+  left: 0px;
+  width:100px;
+  height:100px;
+  background-color: rgb(8, 153, 141);
+  border: 10px solid rgb(0, 103, 110);
+  //min-width: 30px;
+
+
+}
+.drag6{
+  user-select: none;
+  position: absolute;
+  top: 205px;
+  left: 0px;
+  width:110px;
+  height:100px;
+  background-color: rgb(8, 153, 141);
+  border: 10px solid rgb(0, 103, 110);
+  //min-width: 30px;
+
+
+}
+
+.drag7{
+  user-select: none;
+  position: absolute;
+  top: 205px;
+  left: 9px;
+  width:92px;
+  height:100px;
+  background-color: rgb(21, 211, 195);
+  border: 0px solid rgb(0, 103, 110);
+  min-width: 30px;
+
+
+}
+$delta_y: -20px;
+$delta_y_h: -240px;
+
+.sgWin{
+  position: fixed;
+  min-width: 160px;
+  min-height: 40px;
+  background-color: rgb(36, 196, 8);
+  border: 2px solid chartreuse;
+  
+  display: flex;
+  flex-direction: column;
+
+  &.hidden{
+    visibility: hidden;
+  }
+  >.caption{
+    flex: 0 0 auto;
+    background-color: rgb(0, 46, 46);
+    height: 40px;
+    align-items: center;
+    display: flex;
+
+    color: white;
+
+    >.icon{
+      flex:0 0 auto;
+      border: 2px solid white;
+      width: 20px;
+      height: 20px;
+      display: inline-block;
+      pointer-events: none;
+      margin-left: 4px;
+    }
+    >.text{
+      flex:1 1 auto;
+      padding-left: 10px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+ 
+    >.win-btn{
+      flex:0 0 auto;
+      background-image: url(../images/win_icons.png?i=18);
+      width: 20px;
+      height: 20px;
+      display: inline-block;
+  
+      &.min{
+        background-position: 0px $delta_y;	
+        &:HOVER{
+          background-position: -0px $delta_y_h;	
+        }
+      }
+      &.max{
+        background-position: -40px $delta_y;	
+        &:HOVER{
+          background-position: -40px $delta_y_h;	
+        }
+      }
+      &.auto{
+        background-position: -20px $delta_y;	
+        &:HOVER{
+          background-position: -20px $delta_y_h;	
+        }
+      }
+      &.close{
+        margin-right: 4px;
+        background-position: -60px $delta_y;	
+        &:HOVER{
+          background-position: -60px $delta_y_h;	
+        }
+      }
+    }
+  }
+
+  >.body{
+    overflow: auto !important;
+  }
+  
+  &.min{
+    height: auto !important;
+    max-width: 160px !important;
+    >.caption{
+      >.win-btn.min{
+        display: none;
+      }
+    }
+    >.body{
+      flex: 0 0 0px !important;
+      height: 0px;
+    }
+  }
+  &.auto{
+    height: auto!important;
+    width: auto !important;
+    >.caption{
+      >.win-btn.auto{
+        display: none;
+      }
+    }
+    >.body{
+      height: auto !important;
+      width: auto !important;
+    }
+  }
+
+  &.max{
+    width:calc(100% - 20px) !important;
+    height: calc(100% - 20px)!important;
+    top: 10px !important;
+    left: 10px !important;
+    >.caption{
+      >.win-btn.max{
+        display: none;
+      }
+    }
+  }
+  &.close{
+    visibility: hidden;
+  }
+  &.moving{
+    //opacity: 0.5;
+    border-color: rgb(21, 117, 58);
+    user-select: none;
+  }
+  &.resizing{
+    //opacity: 0.2;
+    border-color: rgb(30, 210, 201);
+    user-select: none;
+  }
+
+  .rs.rb {
+    
+    border-radius: 5px;
+    height: 0px !important;
+    width: 0px !important;
+    border: 4px solid green;
+  }
 }
