--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -367,13 +367,38 @@ div[data-sg-type=sg-ajax]{
 $delta_y: -20px;
 $delta_y_h: -240px;
 
+
 .sgWin{
+  background-color: rgb(231, 231, 231);
+  border: 2px solid rgb(212, 211, 211);
+  >.caption{
+    background-color: rgb(8, 55, 112);
+    
+    background: linear-gradient(to bottom, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%);
+
+    color: rgb(114, 114, 114);
+    >.icon{
+      border: 0px solid white;
+    }
+  }
+  &.moving{
+    //border-color: rgb(21, 117, 58);
+  }
+  &.resizing{
+   // border-color: rgb(30, 210, 201);
+  }
+  .rs.rb {
+    border-radius: 5px;
+    height: 0px !important;
+    width: 0px !important;
+    border: 5px solid rgb(224, 111, 6);
+  }
+}
+
+.sgWin.sevian{
   position: fixed;
   min-width: 160px;
   min-height: 40px;
-  background-color: rgb(36, 196, 8);
-  border: 2px solid chartreuse;
-  
   display: flex;
   flex-direction: column;
 
@@ -382,16 +407,17 @@ $delta_y_h: -240px;
   }
   >.caption{
     flex: 0 0 auto;
-    background-color: rgb(0, 46, 46);
+    
     height: 40px;
     align-items: center;
     display: flex;
 
-    color: white;
+    
+    cursor: default;
 
     >.icon{
       flex:0 0 auto;
-      border: 2px solid white;
+      
       width: 20px;
       height: 20px;
       display: inline-block;
@@ -487,21 +513,13 @@ $delta_y_h: -240px;
     visibility: hidden;
   }
   &.moving{
-    //opacity: 0.5;
-    border-color: rgb(21, 117, 58);
+
     user-select: none;
   }
   &.resizing{
-    //opacity: 0.2;
-    border-color: rgb(30, 210, 201);
+
     user-select: none;
   }
 
-  .rs.rb {
-    
-    border-radius: 5px;
-    height: 0px !important;
-    width: 0px !important;
-    border: 4px solid green;
-  }
+  
 }
