--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -297,18 +297,39 @@ div[data-sg-type=sg-ajax]{
   //min-width: 30px;
 
 
+}.drag4a{
+  user-select: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  width:100px;
+  height:50px;
+  background-color: rgb(18, 146, 125);
+  border: 10px solid rgb(2, 99, 67);
+  //min-width: 40px;
+  
+  overflow: auto;
+
+  
+
 }
 .drag4{
   user-select: none;
-  position: absolute;
-  //top: 0px;
+  position: fixed;
+  top: 20%;
+  left: 20%;
+  transform: translate(-50%, -50%);
   width:100px;
-  height:100px;
+  //min-height:400px;
   background-color: rgb(245, 230, 99);
   border: 10px solid rgb(117, 115, 115);
-  min-width: 40px;
-  min-height: 40px;
+  //min-width: 40px;
+  
+  overflow: auto;
+  resize: both;
 
+  
 
 }
 .drag3{
@@ -522,4 +543,67 @@ $delta_y_h: -240px;
   }
 
   
+}
+
+
+.sgPopup{
+position: absolute;
+
+  border:4px solid red;
+  &.hidden{
+    visibility: hidden;
+  }
+}
+
+.popup{
+  
+  
+  
+  width:92px;
+  height:100px;
+  background-color: rgb(21, 211, 195);
+  border: 0px solid rgb(0, 103, 110);
+  
+
+
+}
+
+
+
+.sg-calendar{
+
+
+
+  background-color: #d9480f;
+  border:1px solid red;
+  display: inline-block;
+
+
+  .m-bar{
+
+    >*{
+      background-color: gainsboro;
+      display: inline-block;
+      _border: 1px solid #bbbbbb;
+      margin: 1px;
+      //width: 100%;
+      text-align: center;
+      font-size: 8pt;
+      line-height: 2em;
+      //transition: 0.5s all ease-out;
+      cursor: pointer;      
+    }
+
+  }
+  .y-bar{
+    >*{
+      display: inline-block;
+      border: 1px solid #f4f4f4;
+      
+      text-align: center;
+      font-size: 8pt;
+      line-height: 2em;
+      cursor: pointer;
+    }
+  }
 }
