--- a/css/Layout.css
+++ b/css/Layout.css
@@ -10,64 +10,43 @@ html, body {
 }
 
 .layout {
-  display: -ms-grid;
   display: grid;
   grid-gap: 4px;
-  -ms-grid-columns: 190px (1fr)[2];
-      grid-template-columns: 190px repeat(2, 1fr);
-  -ms-grid-rows: 70px 30px 0.8fr auto;
-      grid-template-rows: 70px 30px 0.8fr auto;
+  grid-template-columns: 190px repeat(2, 1fr);
+  grid-template-rows: 70px 30px 0.8fr auto;
   border: 4px solid red;
   height: 100%;
   overflow: auto;
   padding: 4px;
 }
-
 .layout > * {
   border: 2px solid #d9480f;
 }
-
 .layout .p1 {
-  -ms-grid-column: 1;
   grid-column: 1;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 2;
-  grid-row: 3 / 5;
+  grid-row: 3/5;
   background-color: blueviolet;
 }
-
 .layout .p2 {
   background-color: #ececec;
   overflow: auto;
 }
-
 .layout .p3 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1 / 4;
-  -ms-grid-row: 2;
+  grid-column: 1/4;
   grid-row: 2;
   background-color: #b44b91;
 }
-
 .layout .p4 {
   background-color: #d6d6d6;
   overflow: auto;
 }
-
 .layout .p7 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1 / 4;
-  -ms-grid-row: 1;
+  grid-column: 1/4;
   grid-row: 1;
   border: 2px solid #104581;
 }
-
 .layout .p8 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1 / 4;
+  grid-column: 1/4;
   background-color: #52565a;
 }
 
@@ -110,64 +89,45 @@ table tr td {
 }
 
 .wrapper {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
   grid-auto-rows: minmax(100px, auto);
 }
 
 .one {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
-  -ms-grid-row: 1;
+  grid-column: 1/3;
   grid-row: 1;
 }
 
 .two {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2 / 4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / 3;
+  grid-column: 2/4;
+  grid-row: 1/3;
 }
 
 .three {
-  -ms-grid-column: 1;
   grid-column: 1;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 3;
-  grid-row: 2 / 5;
+  grid-row: 2/5;
 }
 
 .four {
-  -ms-grid-column: 3;
   grid-column: 3;
-  -ms-grid-row: 3;
   grid-row: 3;
 }
 
 .five {
-  -ms-grid-column: 2;
   grid-column: 2;
-  -ms-grid-row: 4;
   grid-row: 4;
 }
 
 .six {
-  -ms-grid-column: 3;
   grid-column: 3;
-  -ms-grid-row: 4;
   grid-row: 4;
 }
 
 .sg-menu.horizontal .caption {
   display: none;
 }
-
 .sg-menu.horizontal .menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -175,11 +135,9 @@ table tr td {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-
 .sg-menu.horizontal .item .icon {
   display: none;
 }
-
 .sg-menu.horizontal li {
   display: inline-block !important;
 }
@@ -188,86 +146,51 @@ table tr td {
   height: 100%;
   overflow: auto;
   grid-gap: 0px;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 190px (1fr)[4];
-      grid-template-columns: 190px repeat(4, 1fr);
-  -ms-grid-rows: 30px 30px auto 30px 30px;
-      grid-template-rows: 30px 30px auto 30px 30px;
+  grid-template-columns: 190px repeat(4, 1fr);
+  grid-template-rows: 30px 30px auto 30px 30px;
 }
-
 .gtcomm .p1 {
-  -ms-grid-column: 1;
   grid-column: 1;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 5;
-  grid-row: 1 / 6;
+  grid-row: 1/6;
   background-color: #272727;
 }
-
 .gtcomm .p2 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 4;
-  grid-column: 2 / 6;
-  -ms-grid-row: 1;
+  grid-column: 2/6;
   grid-row: 1;
   background-color: #979797;
   overflow: auto;
 }
-
 .gtcomm .p3 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 4;
-  grid-column: 2 / 6;
-  -ms-grid-row: 2;
+  grid-column: 2/6;
   grid-row: 2;
   background-color: #3a3a3a;
 }
-
 .gtcomm .p4 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2 / 4;
-  -ms-grid-row: 3;
+  grid-column: 2/4;
   grid-row: 3;
   background-color: #bbbbbb;
   overflow: auto;
 }
-
 .gtcomm .p5 {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 1;
-  grid-column: 4 / 5;
-  -ms-grid-row: 3;
+  grid-column: 4/5;
   grid-row: 3;
   background-color: #cacaca;
   overflow: auto;
 }
-
 .gtcomm .p6 {
-  -ms-grid-column: 5;
-  -ms-grid-column-span: 1;
-  grid-column: 5 / 6;
-  -ms-grid-row: 3;
+  grid-column: 5/6;
   grid-row: 3;
   background-color: #706f6f;
   overflow: auto;
 }
-
 .gtcomm .p7 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 4;
-  grid-column: 2 / 6;
-  -ms-grid-row: 4;
+  grid-column: 2/6;
   grid-row: 4;
   background-color: #f0f0f0;
 }
-
 .gtcomm .p8 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 4;
-  grid-column: 2 / 6;
-  -ms-grid-row: 5;
+  grid-column: 2/6;
   grid-row: 5;
   background-color: #b3b3b3;
 }
@@ -276,13 +199,11 @@ div[data-sg-type=sg-ajax] {
   background-repeat: no-repeat;
   background-position: center center;
 }
-
 div[data-sg-type=sg-ajax].isie {
   background-color: rgba(255, 255, 255, 0.8);
   background-image: url(images/wait1.gif);
   _background-size: 40px 40px;
 }
-
 div[data-sg-type=sg-ajax]:not(.isie) {
   background-color: rgba(0, 0, 0, 0.52);
   background-image: url(images/default2.svg);
@@ -297,38 +218,28 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   height: 100%;
   background-color: #f5e663;
   border: 10px solid rgba(136, 136, 136, 0.5);
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  -ms-grid-rows: auto  auto;
-      grid-template-rows: auto  auto;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto;
 }
-
 .drag > * {
   border: 4px solid rgba(136, 136, 136, 0.5);
 }
-
 .drag > .a {
   text-align: center;
   vertical-align: middle;
   border: 4px solid rgba(136, 136, 136, 0.5);
 }
-
 .drag > .b {
   text-align: center;
   vertical-align: middle;
   background-color: #33a158;
   border: 8px solid rgba(136, 136, 136, 0.5);
 }
-
 .drag .c {
   background-color: #63277a;
 }
-
 .drag .e {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
   grid-column: 2/4;
 }
 
@@ -344,18 +255,38 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   border: 10px solid #802929;
 }
 
+.drag4a {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -20%);
+          transform: translate(-50%, -20%);
+  width: 100px;
+  height: 50px;
+  background-color: #12927d;
+  border: 10px solid #026343;
+  overflow: auto;
+}
+
 .drag4 {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  position: absolute;
+  position: fixed;
+  top: 20%;
+  left: 20%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 100px;
-  height: 100px;
   background-color: #f5e663;
   border: 10px solid #757373;
-  min-width: 40px;
-  min-height: 40px;
+  overflow: auto;
+  resize: both;
 }
 
 .drag3 {
@@ -419,18 +350,15 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   background-color: #e7e7e7;
   border: 2px solid #d4d3d3;
 }
-
 .sgWin > .caption {
   background-color: #083770;
   background: -webkit-gradient(linear, left top, left bottom, from(#e2e2e2), color-stop(50%, #dbdbdb), color-stop(51%, #d1d1d1), to(#fefefe));
   background: linear-gradient(to bottom, #e2e2e2 0%, #dbdbdb 50%, #d1d1d1 51%, #fefefe 100%);
   color: #727272;
 }
-
 .sgWin > .caption > .icon {
   border: 0px solid white;
 }
-
 .sgWin .rs.rb {
   border-radius: 5px;
   height: 0px !important;
@@ -450,11 +378,9 @@ div[data-sg-type=sg-ajax]:not(.isie) {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 .sgWin.sevian.hidden {
   visibility: hidden;
 }
-
 .sgWin.sevian > .caption {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -468,7 +394,6 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   display: flex;
   cursor: default;
 }
-
 .sgWin.sevian > .caption > .icon {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -479,7 +404,6 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   pointer-events: none;
   margin-left: 4px;
 }
-
 .sgWin.sevian > .caption > .text {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -489,7 +413,6 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .sgWin.sevian > .caption > .win-btn {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -499,100 +422,118 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   height: 20px;
   display: inline-block;
 }
-
 .sgWin.sevian > .caption > .win-btn.min {
   background-position: 0px -20px;
 }
-
 .sgWin.sevian > .caption > .win-btn.min:HOVER {
   background-position: 0px -240px;
 }
-
 .sgWin.sevian > .caption > .win-btn.max {
   background-position: -40px -20px;
 }
-
 .sgWin.sevian > .caption > .win-btn.max:HOVER {
   background-position: -40px -240px;
 }
-
 .sgWin.sevian > .caption > .win-btn.auto {
   background-position: -20px -20px;
 }
-
 .sgWin.sevian > .caption > .win-btn.auto:HOVER {
   background-position: -20px -240px;
 }
-
 .sgWin.sevian > .caption > .win-btn.close {
   margin-right: 4px;
   background-position: -60px -20px;
 }
-
 .sgWin.sevian > .caption > .win-btn.close:HOVER {
   background-position: -60px -240px;
 }
-
 .sgWin.sevian > .body {
   overflow: auto !important;
 }
-
 .sgWin.sevian.min {
   height: auto !important;
   max-width: 160px !important;
 }
-
 .sgWin.sevian.min > .caption > .win-btn.min {
   display: none;
 }
-
 .sgWin.sevian.min > .body {
   -webkit-box-flex: 0 !important;
       -ms-flex: 0 0 0px !important;
           flex: 0 0 0px !important;
   height: 0px;
 }
-
 .sgWin.sevian.auto {
   height: auto !important;
   width: auto !important;
 }
-
 .sgWin.sevian.auto > .caption > .win-btn.auto {
   display: none;
 }
-
 .sgWin.sevian.auto > .body {
   height: auto !important;
   width: auto !important;
 }
-
 .sgWin.sevian.max {
   width: calc(100% - 20px) !important;
   height: calc(100% - 20px) !important;
   top: 10px !important;
   left: 10px !important;
 }
-
 .sgWin.sevian.max > .caption > .win-btn.max {
   display: none;
 }
-
 .sgWin.sevian.close {
   visibility: hidden;
 }
-
 .sgWin.sevian.moving {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
-
 .sgWin.sevian.resizing {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
-/*# sourceMappingURL=Layout.css.map */
+
+.sgPopup {
+  position: absolute;
+  border: 4px solid red;
+}
+.sgPopup.hidden {
+  visibility: hidden;
+}
+
+.popup {
+  width: 92px;
+  height: 100px;
+  background-color: #15d3c3;
+  border: 0px solid #00676e;
+}
+
+.sg-calendar {
+  background-color: #d9480f;
+  border: 1px solid red;
+  display: inline-block;
+}
+.sg-calendar .m-bar > * {
+  background-color: gainsboro;
+  display: inline-block;
+  _border: 1px solid #bbbbbb;
+  margin: 1px;
+  text-align: center;
+  font-size: 8pt;
+  line-height: 2em;
+  cursor: pointer;
+}
+.sg-calendar .y-bar > * {
+  display: inline-block;
+  border: 1px solid #f4f4f4;
+  text-align: center;
+  font-size: 8pt;
+  line-height: 2em;
+  cursor: pointer;
+}
