--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -572,17 +572,40 @@ position: absolute;
 
 .sg-calendar{
 
+  user-select: none;
+  background-color: white;
+  color: #686868;
+  width: 100%;
+  min-width: 280px;
+  max-width : 320px;
+  height: 100%;
+  
+  font-family: tahoma;
+  
+  display: flex;
+  flex-direction: column;
+  >*{
+    flex: 1 1 auto;
+   
+    
+  }
+  
+  >table{
+    width: 100%;
 
-
-  background-color: #d9480f;
-  border:1px solid red;
-  display: inline-block;
-
+    thead{
+      background-color: darkgray;
+      color:#ededed;
+      text-align: center;
+      font-weight: bold;
+    }
+  }
 
   .m-bar{
-
+    display: flex;
     >*{
-      background-color: gainsboro;
+      flex:1 1 auto;
+      background-color: rgb(235, 235, 235);
       display: inline-block;
       _border: 1px solid #bbbbbb;
       margin: 1px;
@@ -593,17 +616,138 @@ position: absolute;
       //transition: 0.5s all ease-out;
       cursor: pointer;      
     }
+    >*:hover{
+      background-color: #a00000;
+      color: white;
+    }
 
   }
   .y-bar{
+    display: flex;
     >*{
-      display: inline-block;
+      background-color: rgb(230, 230, 230);
+      margin: 1px;
+      flex:1 1 auto;
       border: 1px solid #f4f4f4;
       
       text-align: center;
       font-size: 8pt;
       line-height: 2em;
       cursor: pointer;
+      
     }
+    >*:hover{
+      background-color: #0070a0;
+      color: white;
+    }
+  }
+
+  .c-bar{
+    display: flex;
+    justify-content: flex-start;
+    //justify-items: center;
+     align-items: center;
+    //padding: 4px;
+    vertical-align: middle;
+    //height: 30px;
+    *{
+      font-size: 9pt;
+      text-align: center;
+      
+      
+    }
+    >*{
+      flex: 1 1 auto;
+     // border: 1px solid red;
+      line-height: 1.5em;
+      background-color: #d6d6d6;
+      padding: 4px;
+      color: rgb(110, 110, 110);
+      
+      &:HOVER{
+        background-color: #747474;
+        color:white;
+        
+      }
+      .p-month:hover, .n-month:hover, .p-year:hover, .n-year:hover{
+        color:rgb(168, 238, 238);
+      }
+    }
+    .c-month{
+      display: flex;
+      >*{
+        flex: 1 1 auto;
+      }
+      select{
+        width: 100px;
+      }
+    }
+    .c-year{
+      display: flex;
+      
+      >*{
+        flex: 1 1 auto;
+      }
+    }
+  }
+
+  .grid{
+    background-color: #ededed;
+    font-size: 9pt;
+    width: 100%;
+    td{
+      text-align: center;
+      
+      height: 20px;
+      font-size: 8pt;
+    }
+
+    .week{
+      background-color: #e5e5e5;
+      &:hover{
+        background-color: rgb(173, 5, 5);
+        color:white;
+      }
+    }
+    .m-prev{
+      background-color: white;
+    }
+    .m-next{
+      background-color: white;
+    }
+    .today{
+      color:rgb(226, 226, 226);
+      background-color: #0070a0;
+      
+    }
+    .m-now.active{
+      color: white;
+      background-color: #f3a600;
+    }
+    .m-prev.active{
+      color: white;
+      background-color: #db4e0d;
+    }
+    .m-next.active{
+      color: white;
+      background-color: #ff8800;
+    }
+  }
+  
+
+  .today{
+    font-size: 10pt;
+    padding: 4px;
+    text-align: center;
+    margin: 1px;
+    cursor: pointer;
+    color: #686868;
+    background-color: #dbdbdb;
+    
+    &:hover{
+      background-color:#1986d4;
+      color:white;
+    }
+
   }
 }
