--- a/css/sgCalendar.css
+++ b/css/sgCalendar.css
@@ -14,30 +14,26 @@
 }
 
 .sg-cal {
-  -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   background-color: white;
   color: #686868;
   width: 100%;
   min-width: 310px;
   height: 100%;
 }
-
 .sg-cal table {
   width: 100%;
   height: 100%;
 }
-
 .sg-cal table td {
   font-size: 9pt;
   text-align: center;
   width: 22px;
   height: 20px;
 }
-
 .sg-cal table td .sgcal-note {
   border-style: solid;
   border-width: 10px 0 10px 10px;
@@ -45,11 +41,9 @@
   top: 0px;
   border-color: #c01515 transparent transparent transparent;
 }
-
 .sg-cal table td .sgcal-note:hover {
   border-color: black transparent transparent transparent !important;
 }
-
 .sg-cal table td .sgcal-ind {
   border-style: solid;
   border-width: 10px 10px 10px 0;
@@ -57,83 +51,66 @@
   left: 0px;
   top: 0px;
 }
-
 .sg-cal table td .sgcal-ind:hover {
   border-color: black transparent transparent transparent !important;
 }
-
 .sg-cal table td:not(.selected) .sgcal-note {
   border-color: #e91500 transparent transparent transparent;
 }
-
 .sg-cal table td:not(.selected) .sgcal-ind {
   border-color: #1b6ac9 transparent transparent transparent;
 }
-
 .sg-cal table .prev, .sg-cal table .next {
   background-color: white;
   color: #5c5c5c;
 }
-
 .sg-cal table .prev:not(.invalid), .sg-cal table .next:not(.invalid) {
   color: gray;
   cursor: pointer;
 }
-
 .sg-cal table .prev:not(.invalid):hover, .sg-cal table .next:not(.invalid):hover {
   background-color: #b4b4b4;
   color: white;
 }
-
 .sg-cal table .prev.invalid, .sg-cal table .next.invalid {
   color: #c3c3c3;
 }
-
 .sg-cal table .prev.selected, .sg-cal table .next.selected {
   background-color: #4b95c4;
   color: white;
 }
-
 .sg-cal table .date {
   background-color: #ededed;
   color: #5c5c5c;
 }
-
 .sg-cal table .date:not(.invalid) {
   color: gray;
   cursor: pointer;
 }
-
 .sg-cal table .date:not(.invalid):hover {
   background-color: #1986d4;
   color: white;
   color: white;
 }
-
 .sg-cal table .date.invalid {
   background-color: #ebebeb;
   color: #c3c3c3;
 }
-
 .sg-cal table .date.selected {
   background-color: #f59b36;
   color: white;
 }
-
 .sg-cal table .week {
   background-color: #e5e5e5;
 }
-
 .sg-cal table .week.active:hover {
   color: white;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.36);
 }
-
 .sg-cal table .head {
   background-color: #dfdfdf;
 }
-
 .sg-cal .sg-cal-months {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -146,7 +123,6 @@
   _background-color: gainsboro;
   color: #777777;
 }
-
 .sg-cal .sg-cal-months span {
   background-color: gainsboro;
   display: inline-block;
@@ -160,18 +136,15 @@
   transition: 0.5s all ease-out;
   cursor: pointer;
 }
-
 .sg-cal .sg-cal-months span:hover {
   background-color: #b3140a;
   color: white;
 }
-
 .sg-cal .sg-cal-months span.active {
   background-color: #0070a0;
   _background-color: pink;
   color: white;
 }
-
 .sg-cal .sg-cal-years {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -185,7 +158,6 @@
   color: #777777;
   margin: 1px;
 }
-
 .sg-cal .sg-cal-years span {
   display: inline-block;
   border: 1px solid #f4f4f4;
@@ -195,18 +167,15 @@
   line-height: 2em;
   cursor: pointer;
 }
-
 .sg-cal .sg-cal-years span:hover {
   background-color: #005a80;
   color: white;
 }
-
 .sg-cal .sg-cal-years span.active {
   background-color: #8b8b8b;
   color: white;
   font-weight: bold;
 }
-
 .sg-cal .sg-cal-head {
   background-color: #cdcdcd;
   display: -webkit-box;
@@ -221,7 +190,6 @@
   _        justify-content: space-between;
   cursor: pointer;
 }
-
 .sg-cal .sg-cal-head > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -231,7 +199,6 @@
   display: -ms-flexbox;
   display: flex;
 }
-
 .sg-cal .sg-cal-head > * > * {
   font-size: 9pt;
   text-align: center;
@@ -241,17 +208,14 @@
   _margin: auto;
   line-height: 2em;
 }
-
 .sg-cal .sg-cal-head > * span:hover {
   color: white;
 }
-
 .sg-cal .sg-cal-head > *:hover {
   background-color: #7b7b7b;
   color: #c9c9c9;
   _font-weight: bold;
 }
-
 .sg-cal .sg-cal-head .b-month span {
   width: 35px;
   _margin: auto;
@@ -259,7 +223,6 @@
   line-height: 2em;
   _border: 2px solid red;
 }
-
 .sg-cal .sg-cal-head select {
   font-size: 9pt;
   -webkit-box-flex: 0;
@@ -268,17 +231,14 @@
   text-align: left;
   margin: auto;
 }
-
 .sg-cal .sg-cal-head select > option {
   font-size: 9pt;
   color: #606060;
 }
-
 .sg-cal .sg-cal-body {
   border: 1px solid gainsboro;
   margin: 1px;
 }
-
 .sg-cal .sg-cal-foot {
   background-color: #dbdbdb;
   font-size: 10pt;
@@ -286,26 +246,22 @@
   text-align: center;
   margin: 1px;
 }
-
 .sg-cal .sg-cal-foot:not(.invalid):hover {
   cursor: pointer;
   background-color: #1986d4;
   color: white;
 }
-
 .sg-cal .sg-cal-foot:not(.invalid):hover .info {
   border-top: 1px solid #bfe2ff;
   color: #b4e1fd;
   _border-top: 1px solid white;
 }
-
 .sg-cal .sg-cal-foot .info {
   display: block;
   color: #2082e9;
   border-top: 1px solid #2b8cdb;
   _text-align: left;
 }
-
 .sg-cal .sgPopup {
   margin: 4px;
   padding: 4px;
@@ -316,29 +272,34 @@
   _border: 2px solid gray;
   border-radius: 4px;
 }
-
 .sg-cal .sgPopup.holy {
   background-color: #0696c1;
 }
-
 .sg-cal .sgPopup.holy .note-title {
   color: #b3e4ff;
 }
-
 .sg-cal .sgPopup.note {
   background-color: #c12305;
 }
-
 .sg-cal .sgPopup.note .note-title {
   color: #ffc1b3;
 }
-
 .sg-cal .sgPopup .note-title {
   text-align: right;
   border-bottom: 1px solid #b3e4ff;
 }
-
 .sg-cal .sgPopup .note-body {
   color: white;
 }
-/*# sourceMappingURL=sgCalendar.css.map */
+
+.sg-popup1 {
+  position: absolute;
+  margin: 4px;
+  padding: 4px;
+  min-width: 160px;
+  min-height: 60px;
+  -webkit-box-shadow: 5px 5px 5px rgba(132, 132, 132, 0.5);
+          box-shadow: 5px 5px 5px rgba(132, 132, 132, 0.5);
+  _border: 2px solid gray;
+  border-radius: 4px;
+}
