--- a/css/Layout.css
+++ b/css/Layout.css
@@ -381,6 +381,9 @@ div[data-sg-type=sg-ajax]:not(.isie) {
 .sgWin.sevian.hidden {
   visibility: hidden;
 }
+.sgWin.sevian.hidden * {
+  display: none;
+}
 .sgWin.sevian > .caption {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -499,14 +502,6 @@ div[data-sg-type=sg-ajax]:not(.isie) {
           user-select: none;
 }
 
-.sgPopup {
-  position: absolute;
-  border: 4px solid red;
-}
-.sgPopup.hidden {
-  visibility: hidden;
-}
-
 .popup {
   width: 92px;
   height: 100px;
@@ -523,7 +518,6 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   color: #686868;
   width: 100%;
   min-width: 280px;
-  max-width: 320px;
   height: 100%;
   font-family: tahoma;
   display: -webkit-box;
@@ -538,37 +532,6 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-}
-.sg-calendar > table {
-  width: 100%;
-}
-.sg-calendar > table thead {
-  background-color: darkgray;
-  color: #ededed;
-  text-align: center;
-  font-weight: bold;
-}
-.sg-calendar .m-bar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.sg-calendar .m-bar > * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  background-color: #ebebeb;
-  display: inline-block;
-  _border: 1px solid #bbbbbb;
-  margin: 1px;
-  text-align: center;
-  font-size: 8pt;
-  line-height: 2em;
-  cursor: pointer;
-}
-.sg-calendar .m-bar > *:hover {
-  background-color: #a00000;
-  color: white;
 }
 .sg-calendar .y-bar {
   display: -webkit-box;
@@ -587,8 +550,40 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   line-height: 2em;
   cursor: pointer;
 }
+.sg-calendar .y-bar > *[data-index="2"] {
+  color: #ececec;
+  background-color: #858585;
+  font-weight: bold;
+}
 .sg-calendar .y-bar > *:hover {
   background-color: #0070a0;
+  color: white;
+}
+.sg-calendar .m-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.sg-calendar .m-bar > * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  background-color: #ebebeb;
+  display: inline-block;
+  margin: 1px;
+  text-align: center;
+  font-size: 8pt;
+  line-height: 2em;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
+  cursor: pointer;
+}
+.sg-calendar .m-bar > *.active {
+  color: #e2e2e2;
+  background-color: #0070a0;
+}
+.sg-calendar .m-bar > *:hover {
+  background-color: #a00000;
   color: white;
 }
 .sg-calendar .c-bar {
@@ -634,7 +629,10 @@ div[data-sg-type=sg-ajax]:not(.isie) {
           flex: 1 1 auto;
 }
 .sg-calendar .c-bar .c-month select {
-  width: 100px;
+  width: 80px;
+  -webkit-box-flex: 0 !important;
+      -ms-flex: 0 0 auto !important;
+          flex: 0 0 auto !important;
 }
 .sg-calendar .c-bar .c-year {
   display: -webkit-box;
@@ -646,46 +644,58 @@ div[data-sg-type=sg-ajax]:not(.isie) {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
-.sg-calendar .grid {
+.sg-calendar > .calendar {
+  width: 100%;
+  height: 180px;
+}
+.sg-calendar > .calendar thead {
+  background-color: darkgray;
+  color: #ededed;
+  text-align: center;
+  font-weight: bold;
+}
+.sg-calendar > .calendar tbody {
   background-color: #ededed;
   font-size: 9pt;
-  width: 100%;
 }
-.sg-calendar .grid td {
+.sg-calendar > .calendar tbody td {
   text-align: center;
-  height: 20px;
   font-size: 8pt;
 }
-.sg-calendar .grid .week {
+.sg-calendar > .calendar tbody .week {
   background-color: #e5e5e5;
 }
-.sg-calendar .grid .week:hover {
+.sg-calendar > .calendar tbody .week:hover {
   background-color: #ad0505;
   color: white;
 }
-.sg-calendar .grid .m-prev {
+.sg-calendar > .calendar tbody .day:hover {
+  background-color: black;
+  color: aqua;
+}
+.sg-calendar > .calendar tbody .m-prev {
   background-color: white;
 }
-.sg-calendar .grid .m-next {
+.sg-calendar > .calendar tbody .m-next {
   background-color: white;
 }
-.sg-calendar .grid .today {
+.sg-calendar > .calendar tbody .today {
   color: #e2e2e2;
   background-color: #0070a0;
 }
-.sg-calendar .grid .m-now.active {
+.sg-calendar > .calendar tbody .m-now.active {
   color: white;
   background-color: #f3a600;
 }
-.sg-calendar .grid .m-prev.active {
+.sg-calendar > .calendar tbody .m-prev.active {
   color: white;
   background-color: #db4e0d;
 }
-.sg-calendar .grid .m-next.active {
+.sg-calendar > .calendar tbody .m-next.active {
   color: white;
   background-color: #ff8800;
 }
-.sg-calendar .today {
+.sg-calendar .t-bar {
   font-size: 10pt;
   padding: 4px;
   text-align: center;
@@ -694,7 +704,205 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   color: #686868;
   background-color: #dbdbdb;
 }
-.sg-calendar .today:hover {
+.sg-calendar .t-bar:hover {
   background-color: #1986d4;
   color: white;
+}
+
+.sgcal-note {
+  border-style: solid;
+  border-width: 10px 0 10px 10px;
+  right: 0px;
+  top: 0px;
+  border-color: #c01515 transparent transparent transparent;
+}
+.sgcal-note:hover {
+  border-color: black transparent transparent transparent !important;
+}
+
+.sgcal-ind {
+  border-style: solid;
+  border-width: 10px 10px 10px 0;
+  border-color: #0d5ebf transparent transparent transparent;
+  left: 0px;
+  top: 0px;
+}
+.sgcal-ind:hover {
+  border-color: black transparent transparent transparent !important;
+}
+
+.sg-popup {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+.sg-popup.hidden {
+  visibility: hidden;
+}
+
+.cal-note {
+  background-color: #0696c1;
+  font-size: 10pt;
+  margin: 4px;
+  padding: 4px;
+  min-width: 160px;
+  min-height: 60px;
+  -webkit-box-shadow: 5px 5px 5px rgba(132, 132, 132, 0.5);
+          box-shadow: 5px 5px 5px rgba(132, 132, 132, 0.5);
+  border-radius: 4px;
+}
+.cal-note .note-title {
+  color: #b3e4ff;
+  text-align: right;
+  border-bottom: 1px solid #b3e4ff;
+}
+.cal-note .note-body {
+  color: white;
+}
+
+.cal-picker > .body {
+  height: 100%;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+.cal-picker > .body > * {
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
+}
+
+.sg-form {
+  padding: 4px;
+  margin: 5px;
+  border: 2px solid #dadada;
+  background-color: #f0f0f0;
+}
+.sg-form > .caption {
+  background-color: #c0c0c0;
+  text-align: center;
+  color: white;
+  line-height: 2em;
+  text-transform: uppercase;
+}
+.sg-form > .page {
+  font-size: 10pt;
+  color: #6e6e6e;
+  border: 1px solid #cfcece;
+  padding: 4px;
+}
+.sg-form > .page > .field {
+  margin-top: 5px;
+}
+.sg-form > .page > .field > .label {
+  margin-left: 10px;
+  text-transform: capitalize;
+}
+.sg-form > .page > .field > .label > .ind {
+  display: inline-block;
+  color: red;
+  margin-left: 5px;
+}
+.sg-form > .page > .field > .input input {
+  color: #585858;
+  border: 1px solid #d8d7d7;
+  height: 2em;
+}
+.sg-form > .page > .field > .input button {
+  height: 2em;
+  color: #585858;
+  border: 1px solid #d8d7d7;
+}
+.sg-form > .page > .sg-menu {
+  background-color: #e4e4e4;
+  padding: 4px;
+  border: 2px solid #ececec;
+  margin-top: 10px;
+}
+.sg-form > .page > .sg-menu .option {
+  line-height: 2em;
+  background-color: #ff8800;
+  color: #e7e7e7;
+  border: 2px solid #ececec;
+  cursor: pointer;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
+}
+.sg-form > .page > .sg-menu .option:hover {
+  background-color: #cf4404;
+  color: #d8d7d7;
+}
+
+.sg-grid {
+  padding: 4px;
+  margin: 5px;
+  border: 2px solid #dadada;
+  background-color: #f0f0f0;
+}
+.sg-grid > .caption {
+  background-color: #c0c0c0;
+  text-align: center;
+  color: white;
+  line-height: 2em;
+  text-transform: uppercase;
+}
+.sg-grid > .grid-search {
+  text-align: center;
+  line-height: 2em;
+}
+.sg-grid > .grid-search input {
+  color: #585858;
+  border: 1px solid #d8d7d7;
+  height: 2em;
+}
+.sg-grid > .grid-search .btn-search {
+  background-color: #ff8800;
+  color: #e7e7e7;
+  cursor: pointer;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
+}
+.sg-grid > .grid-search .btn-search:hover {
+  background-color: #cf4404;
+  color: #d8d7d7;
+}
+.sg-grid > .body > .grid-table > thead tr > td {
+  font-size: 10pt;
+  color: #6e6e6e;
+  margin-left: 10px;
+  text-transform: capitalize;
+  background-color: #e4e4e4;
+}
+.sg-grid > .body > .grid-table > tbody > tr > td {
+  color: #727272;
+}
+.sg-grid > .body > .grid-table > tbody > tr:nth-child(2n) {
+  background-color: #e9e9e9;
+}
+.sg-grid > .sg-menu {
+  background-color: #e4e4e4;
+  padding: 4px;
+  border: 2px solid #ececec;
+  margin-top: 10px;
+}
+.sg-grid > .sg-menu .option {
+  line-height: 2em;
+  background-color: #ff8800;
+  color: #e7e7e7;
+  border: 2px solid #ececec;
+  cursor: pointer;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
+}
+.sg-grid > .sg-menu .option:hover {
+  background-color: #cf4404;
+  color: #d8d7d7;
 }
