--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -422,6 +422,7 @@ $delta_y_h: -240px;
   min-height: 40px;
   display: flex;
   flex-direction: column;
+  box-shadow: 5px 6px 12px -4px rgba(0,0,0,0.75);
 
   &.hidden{
     visibility: hidden;
